refactor: Add new custom colors

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -1,26 +1,27 @@
 :root {
     /* Gray */
-    --gray-0: #ffffff;
+    --gray-0: #FFFFFF;
     --gray-50: #E6E6E6;
-    --gray-200: #B3B3B3;
+    --gray-200: #999999;
     --gray-400: #808080;
-    --gray-800: #4D4D4D;
-    --gray-900: #101010;
+    --gray-600: #4C4C4C;
+    --gray-800: #333333;
+    --gray-900: #191919;
 
-    /* Blue */
-    --blue-0: #D4D3F8;
-    --blue-50: #AEADF1;
-    --blue-200: #7977E8;
-    --blue-400: #2825DA;
-    --blue-800: #181683;
+    /* orange */
+    --orange-200: #FFB966;
+    --orange-400: #FF8A00;
+    --orange-600: #CC6E00;
 
     /* Red */
-    --red-0: #F8D4D3;
-    --red-200: #E97E7C;
-    --red-800: #CA2522;
+    --red-200: #F5A5A4;
+    --red-400: #EA4B48;
+    --red-600: #E51E1A;
 
     /* Green */
-    --green-0: #D3F8D4;
-    --green-200: #7CE97E;
-    --green-800: #22CA25;
+    --green-0: #EDF2EE;
+    --green-200: #618062;
+    --green-400: #00B207;
+    --green-600: #2C742F;
+    --green-800: #002603;
 }
