feat: Add new testimonials and star rating components

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,3 +4,10 @@
 
 @import "colors.css";
 @import "scrollbar.css";
+
+
+/* center the slides inside react-slick */
+.slick-track{
+    display: flex !important;
+    align-items: center;
+}
